@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure assets in images, javascripts, and stylesheets are touched after updating the code, to ensure the asset timestamping feature of rails works correctly [Jamis Buck]
+
 * Added warning if password is prompted for and termios is not installed [John Labovitz]
 
 * Added :as option to sudo, so you can specify who the command is executed as [Mark Imbriaco]
